# RAG

./: main.py  pyproject.toml
app/api/v1/: dependencies.py
app/api/v1/routes/: chats.py  documents.py  ingest.py  search.py
app/core/: config.py
app/db/: models.py  session.py
app/schemas/: ingest.py  search.py
app/services/: classifier.py  embedder.py  ingestor.py  rag.py  reranker.py  vectorstore.py
app/tasks/: ingest_tasks.py
scripts/: create_tables.py
