[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pdf2image>=1.17.0",
    "pgvector>=0.4.2",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pypandoc>=1.17",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
    "unstructured[all-docs,docx,odt,pdf]>=0.21.5",
    "uvicorn[standard]>=0.42.0",
]
